<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.paulortvalle.aula03calc2.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtValor1"
        android:layout_marginTop="30dp"
        android:hint="@string/strValor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/txtValor1"
        android:layout_alignLeft="@+id/txtValor1"
        android:layout_alignStart="@+id/txtValor1"
        android:layout_marginTop="20dp"
        android:hint="@string/strValor"
        android:id="@+id/txtValor2" />

    <Button
        android:text="@string/strSomar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtValor2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/btnSomar" />

    <Button
        android:text="@string/strMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnMultiplicar"
        android:layout_below="@+id/btnSubtrair"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/strSubtrair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnSubtrair"
        android:layout_below="@+id/btnSomar"
        android:layout_alignLeft="@+id/btnSomar"
        android:layout_alignStart="@+id/btnSomar" />

    <Button
        android:text="@string/strDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnDividir"
        android:layout_below="@+id/btnMultiplicar"
        android:layout_alignRight="@+id/btnSubtrair"
        android:layout_alignEnd="@+id/btnSubtrair" />

</RelativeLayout>
